--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
   </head>
-  <title>Example EP + C Portfolio</title>
+  <title>EP + C Portfolio</title>
   <body>
 
-    <h1> Dr. Ortiz / Ms. Zhu </h1>
+    <h1> valerie ruiz </h1>
     <p>
-   Welcome to our page!
+   
     </p>
 
 
@@ -19,22 +19,22 @@
 
       <tr>
         <td>
-          <h3> PROJECT 1</h3>
-          <a href = "LinkHere.html">
+          <h3> product design </h3>
+          <a href = "https://docs.google.com/document/d/e/2PACX-1vRwMRyzZNxt0OZJlGks5-v5cUGxBkXPw_-mweuzmyw64HRMp0pH92KyrVmc-Z6F012g9WJWAVHzlk3P/pub.html">
             <img src = 'images/haiku.jpeg' width=70%>
           </a>
         </td>
 
         <td>
-          <h3> PROJECT 2</h3>
-          <a href = "LinkHere.html">
+          <h3> repair reflection </h3>
+          <a href = "https://docs.google.com/document/d/e/2PACX-1vTOv-ACJ6m6mP6zRIdbMkNqCNhVOKbhqSlOBz3A_zs-zzbITPNGlO3nn5k9acM2nUJdSPBuoTB5FYWL/pub.html">
             <img src = 'images/haiku.jpeg' width=70%>
           </a>
         </td>
 
         <td>
-          <h3> PROJECT 3</h3>
-          <a href = "LinkHere.html">
+          <h3> passion project </h3>
+          <a href = "https://docs.google.com/document/d/e/2PACX-1vRfNDF-SHPnOlvUEPJrIzPr6l1382G2nceey5tkyxuTQqUVSzoqbSWvv8NBsj2HYrHEH59bjy7W_zd2/pub.html">
             <img src = 'images/haiku.jpeg' width=70%>
           </a>
         </td>
