--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
       <tr>
         <td>
           <h3> product design </h3>
-          <a href = "https://docs.google.com/document/d/e/2PACX-1vRwMRyzZNxt0OZJlGks5-v5cUGxBkXPw_-mweuzmyw64HRMp0pH92KyrVmc-Z6F012g9WJWAVHzlk3P/pub.html">
+          <a href = "https://docs.google.com/document/d/e/2PACX-1vRwMRyzZNxt0OZJlGks5-v5cUGxBkXPw_-mweuzmyw64HRMp0pH92KyrVmc-Z6F012g9WJWAVHzlk3P/pub">
             <img src = 'images/haiku.jpeg' width=70%>
           </a>
         </td>
 
         <td>
           <h3> repair reflection </h3>
-          <a href = "https://docs.google.com/document/d/e/2PACX-1vTOv-ACJ6m6mP6zRIdbMkNqCNhVOKbhqSlOBz3A_zs-zzbITPNGlO3nn5k9acM2nUJdSPBuoTB5FYWL/pub.html">
+          <a href = "https://docs.google.com/document/d/e/2PACX-1vTOv-ACJ6m6mP6zRIdbMkNqCNhVOKbhqSlOBz3A_zs-zzbITPNGlO3nn5k9acM2nUJdSPBuoTB5FYWL/pub">
             <img src = 'images/haiku.jpeg' width=70%>
           </a>
         </td>
 
         <td>
           <h3> passion project </h3>
-          <a href = "https://docs.google.com/document/d/e/2PACX-1vRfNDF-SHPnOlvUEPJrIzPr6l1382G2nceey5tkyxuTQqUVSzoqbSWvv8NBsj2HYrHEH59bjy7W_zd2/pub.html">
+          <a href = "https://docs.google.com/document/d/e/2PACX-1vRfNDF-SHPnOlvUEPJrIzPr6l1382G2nceey5tkyxuTQqUVSzoqbSWvv8NBsj2HYrHEH59bjy7W_zd2/pub">
             <img src = 'images/haiku.jpeg' width=70%>
           </a>
         </td>
