--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
             <img src = 'images/haiku.jpeg' width=70%>
           </a>
         </td>
-
+ <tr>
+        <td>
+          <h3> design sprint</h3>
+          <a href = "https://docs.google.com/document/d/e/2PACX-1vSlDGz1VNqy4e93tz8ddMiBTRkUIt1nAduq15_AobYPXvLKtKRwiVTkUw0e8vIaHDaA2BsR21DPrDxc/pub">
+            <img src = 'images/haiku.jpeg' width=70%>
+          </a>
+        </td>
+     
         <td>
           <h3> repair reflection </h3>
           <a href = "https://docs.google.com/document/d/e/2PACX-1vTOv-ACJ6m6mP6zRIdbMkNqCNhVOKbhqSlOBz3A_zs-zzbITPNGlO3nn5k9acM2nUJdSPBuoTB5FYWL/pub">
@@ -41,13 +48,7 @@
 
       </tr>
 
-      <tr>
-        <td>
-          <h3> PROJECT 4</h3>
-          <a href = "LinkHere.html">
-            <img src = 'images/haiku.jpeg' width=70%>
-          </a>
-        </td>
+     
 
         <td>
           <h3> PROJECT 5</h3>
